<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_product_name"
            style="@style/Text44SemiDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_product_name"
            style="@style/Text18RegPink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
            app:met_baseColor="@color/colorPink"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_cals"
            style="@style/Text18RegPink"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/calories"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/et_product_name"
            app:layout_constraintTop_toBottomOf="@id/et_product_name"
            app:met_baseColor="@color/colorPink"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_protein"
            style="@style/Text18RegPink"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/protein"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/et_product_name"
            app:layout_constraintTop_toBottomOf="@id/et_product_name"
            app:met_baseColor="@color/colorPink"
            app:met_floatingLabel="highlight" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_food"
            app:layout_constraintBottom_toTopOf="@id/et_grams_new"
            app:layout_constraintEnd_toStartOf="@id/et_protein"
            app:layout_constraintStart_toEndOf="@id/et_cals"
            app:layout_constraintTop_toBottomOf="@id/et_product_name" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_carbo"
            style="@style/Text18RegPink"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/carbs"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/et_product_name"
            app:layout_constraintTop_toBottomOf="@id/et_cals"
            app:met_baseColor="@color/colorPink"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_fat"
            style="@style/Text18RegPink"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/fat"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/et_product_name"
            app:layout_constraintTop_toBottomOf="@id/et_protein"
            app:met_baseColor="@color/colorPink"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_grams_new"
            style="@style/Text18RegPink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/grams"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/et_product_name"
            app:layout_constraintTop_toBottomOf="@id/et_carbo"
            app:met_baseColor="@color/colorPink"
            app:met_floatingLabel="highlight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            style="@style/ButtonBig"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>