<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="overalNutrients"
            type="com.example.recipe.data.entities.Nutrients" />

        <variable
            name="caloriesViewModel"
            type="com.example.recipe.ui.cals.CaloriesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.timqi.sectorprogressview.ColorfulRingProgressView
                    android:id="@+id/progress_cals"
                    overalCals="@{overalNutrients.cals}"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="24dp"
                    app:bgColor="@color/colorTextGrey"
                    app:fgColorEnd="@color/colorPinkDark"
                    app:fgColorStart="@color/colorPink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:progress="@{caloriesViewModel.nutrients.cals}"
                    app:startAngle="0"
                    app:strokeWidth="8dp" />

                <TextView
                    android:id="@+id/tv_cals"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/calories"
                    app:layout_constraintBottom_toTopOf="@id/tv_cals_count"
                    app:layout_constraintEnd_toEndOf="@id/progress_cals"
                    app:layout_constraintStart_toStartOf="@id/progress_cals"
                    app:layout_constraintTop_toTopOf="@id/progress_cals" />

                <TextView
                    android:id="@+id/tv_cals_count"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/progress_cals"
                    app:layout_constraintEnd_toEndOf="@id/progress_cals"
                    app:layout_constraintStart_toStartOf="@id/progress_cals"
                    app:layout_constraintTop_toTopOf="@id/tv_cals"
                    app:overal="@{overalNutrients.cals}"
                    app:value="@{caloriesViewModel.nutrients.cals}" />

                <TextView
                    android:id="@+id/tv_protein"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    app:layout_constraintBottom_toTopOf="@id/progress_protein"
                    app:layout_constraintEnd_toEndOf="@id/progress_protein"
                    app:layout_constraintStart_toStartOf="@id/progress_protein" />

                <com.daimajia.numberprogressbar.NumberProgressBar
                    android:id="@+id/progress_protein"
                    overal="@{overalNutrients.protein}"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toStartOf="@id/progress_fat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progress_cals"
                    app:progress="@{caloriesViewModel.nutrients.protein}"
                    app:progress_reached_bar_height="6dp"
                    app:progress_reached_color="@color/colorPink"
                    app:progress_text_color="@color/colorPink"
                    app:progress_unreached_bar_height="6dp"
                    app:progress_unreached_color="@color/colorTextGrey" />

                <TextView
                    android:id="@+id/tv_protein_count"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/progress_protein"
                    app:layout_constraintStart_toStartOf="@id/progress_protein"
                    app:layout_constraintTop_toBottomOf="@id/progress_protein"
                    app:overal="@{overalNutrients.protein}"
                    app:value="@{caloriesViewModel.nutrients.protein}" />

                <TextView
                    android:id="@+id/tv_fat"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    app:layout_constraintBottom_toTopOf="@id/progress_fat"
                    app:layout_constraintEnd_toEndOf="@id/progress_fat"
                    app:layout_constraintStart_toStartOf="@id/progress_fat" />

                <com.daimajia.numberprogressbar.NumberProgressBar
                    android:id="@+id/progress_fat"
                    overal="@{overalNutrients.fat}"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toStartOf="@id/progress_carbo"
                    app:layout_constraintStart_toEndOf="@id/progress_protein"
                    app:layout_constraintTop_toBottomOf="@id/progress_cals"
                    app:progress="@{caloriesViewModel.nutrients.fat}"
                    app:progress_reached_bar_height="6dp"
                    app:progress_reached_color="@color/colorPink"
                    app:progress_text_color="@color/colorPink"
                    app:progress_unreached_bar_height="6dp"
                    app:progress_unreached_color="@color/colorTextGrey" />

                <TextView
                    android:id="@+id/tv_fat_count"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/progress_fat"
                    app:layout_constraintStart_toStartOf="@id/progress_fat"
                    app:layout_constraintTop_toBottomOf="@id/progress_fat"
                    app:overal="@{overalNutrients.fat}"
                    app:value="@{caloriesViewModel.nutrients.fat}" />

                <TextView
                    android:id="@+id/tv_carbo"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carbs"
                    app:layout_constraintBottom_toTopOf="@id/progress_carbo"
                    app:layout_constraintEnd_toEndOf="@id/progress_carbo"
                    app:layout_constraintStart_toStartOf="@id/progress_carbo" />

                <com.daimajia.numberprogressbar.NumberProgressBar
                    android:id="@+id/progress_carbo"
                    overal="@{overalNutrients.carbs}"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/progress_fat"
                    app:layout_constraintTop_toBottomOf="@id/progress_cals"
                    app:progress="@{caloriesViewModel.nutrients.carbs}"
                    app:progress_reached_bar_height="6dp"
                    app:progress_reached_color="@color/colorPink"
                    app:progress_text_color="@color/colorPink"
                    app:progress_unreached_bar_height="6dp"
                    app:progress_unreached_color="@color/colorTextGrey" />

                <TextView
                    android:id="@+id/tv_carbs_count"
                    style="@style/Text22SemiDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/progress_carbo"
                    app:layout_constraintStart_toStartOf="@id/progress_carbo"
                    app:layout_constraintTop_toBottomOf="@id/progress_carbo"
                    app:overal="@{overalNutrients.carbs}"
                    app:value="@{caloriesViewModel.nutrients.carbs}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_eaten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_fat_count"
                    app:recycler_data="@{caloriesViewModel.food}"
                    tools:listitem="@layout/item_cals_food" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/loading_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:indicatorColor="@color/colorPink"
                    app:indicatorName="PacmanIndicator"
                    app:layout_constraintEnd_toEndOf="@id/rv_eaten"
                    app:layout_constraintStart_toStartOf="@id/rv_eaten"
                    app:layout_constraintTop_toTopOf="@id/rv_eaten"
                    app:progress_visibility="@{caloriesViewModel.progress}" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_eaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/colorPink"
            android:src="@drawable/ic_add_black_24dp"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>